Add next to package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "^13.5.5",
     "react": "latest",
     "react-dom": "latest"
   },
