--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 Flask==2.3.3
+Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.1.1
 idna==3.4
 itsdangerous==2.1.2
