--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.5.1",
     "next": "^13.5.5",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
