--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,5 @@
+alembic==1.13.0
+aniso8601==9.0.1
 anyio==4.0.0
 appnope==0.1.3
 argon2-cffi==23.1.0
@@ -15,6 +17,8 @@ cffi==1.16.0
 charset-normalizer==3.3.0
 click==8.1.7
 comm==0.2.0
+contourpy==1.2.0
+cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
@@ -22,9 +26,13 @@ executing==2.0.1
 fastjsonschema==2.18.1
 Flask==2.3.3
 Flask-Cors==4.0.0
+Flask-Migrate==4.0.5
+flask-restx==1.2.0
 Flask-SQLAlchemy==3.1.1
+fonttools==4.44.0
 fqdn==1.5.1
 idna==3.4
+importlib-resources==6.1.1
 ipykernel==6.26.0
 ipython==8.17.2
 ipywidgets==8.1.1
@@ -34,7 +42,7 @@ jedi==0.19.1
 Jinja2==3.1.2
 json5==0.9.14
 jsonpointer==2.4
-jsonschema==4.19.2
+jsonschema==4.17.3
 jsonschema-specifications==2023.7.1
 jupyter==1.0.0
 jupyter-console==6.6.3
@@ -48,7 +56,10 @@ jupyterlab==4.0.8
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.9
 jupyterlab_server==2.25.1
+kiwisolver==1.4.5
+Mako==1.3.0
 MarkupSafe==2.1.3
+matplotlib==3.8.1
 matplotlib-inline==0.1.6
 mistune==3.0.2
 mysql-connector-python==8.2.0
@@ -58,11 +69,13 @@ nbformat==5.9.2
 nest-asyncio==1.5.8
 notebook==7.0.6
 notebook_shim==0.2.3
+numpy==1.26.1
 overrides==7.4.0
 packaging==23.2
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
+Pillow==10.1.0
 platformdirs==3.11.0
 prometheus-client==0.18.0
 prompt-toolkit==3.0.39
@@ -73,9 +86,12 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.16.1
 PyMySQL==1.1.0
+pyparsing==3.1.1
+pyrsistent==0.20.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-json-logger==2.0.7
+pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.1
 qtconsole==5.5.0
