--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "chart.js": "^4.4.1",
     "d3": "^7.8.5",
     "next": "^13.5.5",
     "react": "latest",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "latest",
     "react-select": "^5.8.0"
   },
